tests/snapshots/generated_from_inputs__bad_no_return_in_if.snap
---
source: tests/fixtures.rs
description: "int main () {\n  int n;\n  if (n < 2) {\n    return 1;\n  } else\n  {}\n}\n"
input_file: inputs/bad/no_return_in_if.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m no_return_in_if:1:13 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [31m╭[0m[31m─[0m[31m▶[0m[31m [0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mm[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249m [0m[38;5;249m([0m[38;5;249m)[0m[38;5;249m [0m[31m{[0m
 [38;5;240m  ┆[0m [31m┆[0m   
 [38;5;246m7 │[0m [31m├[0m[31m─[0m[31m▶[0m[31m [0m[31m}[0m
 [38;5;240m  │[0m [31m│[0m       
 [38;5;240m  │[0m [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Missing return statement
[38;5;246m───╯[0m
