tests/snapshots/generated_from_inputs__bad_redefinition_of_printInt.snap
---
source: tests/fixtures.rs
description: "// Author: Jacek Tomaszewski 277663\n//redefinition of builtin\n\nint main() {\n   return 0; \n}\n\nvoid printInt(int x) {\n    \n}\n"
input_file: inputs/bad/redefinition_of_printInt.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m redefinition_of_printInt:8:6 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m8 │[0m [38;5;249mv[0m[38;5;249mo[0m[38;5;249mi[0m[38;5;249md[0m[38;5;249m [0m[31mp[0m[31mr[0m[31mi[0m[31mn[0m[31mt[0m[31mI[0m[31mn[0m[31mt[0m[38;5;249m([0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m)[0m[38;5;249m [0m[38;5;249m{[0m
 [38;5;240m  │[0m      [31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m          [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Redeclaration of a built-in `printInt`
[38;5;246m───╯[0m
