tests/snapshots/generated_from_inputs__bad_string_decrementation.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Wysocki 277696\nint main() {\n    string a;\n    a--;\n    return 0;\n}\n"
input_file: inputs/bad/string_decrementation.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m string_decrementation:4:5 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[31ma[0m[38;5;249m-[0m[38;5;249m-[0m[38;5;249m;[0m
 [38;5;240m  │[0m     [31m┬[0m  
 [38;5;240m  │[0m     [31m╰[0m[31m─[0m[31m─[0m Type mismatch: expected `int`, found `string`
[38;5;246m───╯[0m
