tests/snapshots/generated_from_inputs__bad_string_sub.snap
---
source: tests/fixtures.rs
description: "// Author: Tomasz Biczel 277568\nint main() {\n  string x;\n  x = \"asd\" - \"ewq\";\n  return 0;\n}"
input_file: inputs/bad/string_sub.lat
---
[31mError:[0m Type error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m string_sub:4:7 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m4 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249mx[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[31m"[0m[31ma[0m[31ms[0m[31md[0m[31m"[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249me[0m[38;5;249mw[0m[38;5;249mq[0m[38;5;249m"[0m[38;5;249m;[0m
 [38;5;240m  │[0m       [31m─[0m[31m─[0m[31m┬[0m[31m─[0m[31m─[0m  
 [38;5;240m  │[0m         [31m╰[0m[31m─[0m[31m─[0m[31m─[0m[31m─[0m Type mismatch: expected `int`, found `string`
[38;5;246m───╯[0m
